style.css
/* basic style */

.todo-app {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}

.header {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}

.header__image{
  width: 100%;
}

.header__info {
  font-family: fantasy, cursive;
}

@media (max-width: 768px) {
  .header {
    text-align: center;
  }
}

.wrapper {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}

.task {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
}

.add-task__wrapper {
  display: flex;
}

.task-list {
  margin: 0;
  padding: 0px;
}

.task-list__item,
.task-list__header {
  list-style: none;
}

.add-task__input,
.task-list__input,
.btn {
  outline: none;
}

.btn {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}

.btn:hover {
  color: #3a3a3a;
}

/* heading */

.task-list__title,
.add-task__title {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}

.add-task__input,
.task-list__input {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #fff;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}

.add-task__input:focus,
.task-list__input:focus {
  color: #333;
}

/* new task */

.add-task__title {
  display: block;
  margin: 0 0 20px;
}

.add-task__input {
  width: 318px;
}

/* task list */

.task-list__item {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.task-list__item > * {
  vertical-align: middle;
}

.task-list__checkbox {
  margin: 0 10px;
}

.task-list__label {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}

.task-list__input {
  width: 226px;
}

.remove-btn-image {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}

.remove-btn-image:hover {
  transform: rotateZ(0);
}

/* completed */

.complete-task__label {
  text-decoration: line-through;
  color: #888;
}

/* edit task */

.task-list__input {
  display: none;
}

.edit-mode .task-list__input {
  display: inline-block;
  width: 224px;
}

.edit-mode .task-list__label {
  display: none;
}

